--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crm_data",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.0",
@@ -27,7 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
